[package]
name = "crypto-trading-bot-demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_trading_bot_demo"
path = "src/lib.rs"

[[bin]]
name = "crypto-trading-bot-demo"
path = "src/main.rs"

[dependencies]
barter = "0.12"
barter-data = "0.10"
barter-execution = "0.6"
barter-instrument = "0.3"
barter-integration = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
linfa = "0.8"
linfa-linear = "0.8"
ndarray = "0.16"
smartcore = { version = "0.4", features = ["ndarray-bindings"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
special = "0.8"  # For special functions needed in heavy-tailed distributions